--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0
+        dotnet-version: 3.1.x
     - name: Build for Linux
       run: dotnet publish -r linux-x64 --configuration ReleaseComplete
     - name: Build for Windows
