--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: .NET Core
+
 on: [push]
 
 jobs:
@@ -11,24 +12,6 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.x
-    - name: Build for Linux
-      run: dotnet publish -r linux-x64 --configuration ReleaseComplete
-    - name: Build for Windows
+        dotnet-version: 3.1.10
+    - name: Build
       run: dotnet publish -r win-x64 --configuration ReleaseComplete
-    - name: Upload artifact - Windows
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: KlassenAdministratieDevOps.exe
-        path: KlassenAdministratieDevOps/bin/ReleaseComplete/netcoreapp3.1/win-x64/publish/KlassenAdministratieDevOps.exe
-    - name: Make Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: |
-          
-          lin/bin/ReleaseComplete/netcoreapp3.1/linux-x64/publish/KlassenAdministratieDevOps
-          KlassenAdministratieDevOps/bin/ReleaseComplete/netcoreapp3.1/win-x64/publish/KlassenAdministratieDevOps.exe
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
