--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,24 @@
-name: .NET Core
+name: Build and Deploy
 
 on: [push]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+    - uses: actions/checkout@v2
+    - name: DevOps WorkFlow
+      uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 3.1.10
-    - name: Build
-      run: dotnet publish -r win-x64 --configuration ReleaseComplete
+        dotnet-version: 3.1.401
+    - name: Build DotNet Devops Application
+      run: dotnet build --configuration Release
+    - name: Publish DotNet Devops application
+      run: dotnet publish --configuration Release --output bin/Release/publish
+      env:
+        PublishFolder: bin/Release/publish
+    - name: Create an executable .exe file
+      run: |
+        cd "$PublishFolder"
+        dotnet publish -r win-x64 --self-contained false --output "$PublishFolder/win-x64"
