--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: "Publish And Deploy Actions"
 on:
   push:
     tags:
-      - "class-commands/v*"
+      - "klassen-administration/v*"
 
 jobs:
   deploy:
