--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.x
-#       - run: dotnet restore KlassenAdministratieDevOps/KlassenAdministratieDevOps.csproj
+      - run: dotnet restore KlassenAdministratieDevOps/KlassenAdministratieDevOps.csproj
       - run: dotnet build KlassenAdministratieDevOps/KlassenAdministratieDevOps.csproj -c Release --no-restore
       - run: dotnet publish KlassenAdministratieDevOps/KlassenAdministratieDevOps.csproj -c Release --self-contained -r win-x64 -p:PublishSingleFile=true --no-build
       - uses: actions/create-release@v1
