--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.x
-#       - run: dotnet restore KlassenAdministratieDevOps.csproj
-#         name: Action - Dotnet Restore
-#         working-directory: KlassenAdministratieDevOps
+      - run: dotnet restore KlassenAdministratieDevOps.csproj
+        name: Action - Dotnet Restore
+        working-directory: KlassenAdministratieDevOps
       - run: dotnet build KlassenAdministratieDevOps.csproj -c Release --no-restore
         name: Action - Dotnet Build
         working-directory: KlassenAdministratieDevOps
