--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - run: dotnet restore KlassenAdministratieDevOps.csproj
         name: Action - Dotnet Restore
         working-directory: KlassenAdministratieDevOps
-      - run: dotnet build KlassenAdministratieDevOps.csproj -c Release --no-restore
+      - run: dotnet build KlassenAdministratieDevOps.csproj -c Release
         name: Action - Dotnet Build
         working-directory: KlassenAdministratieDevOps
       - run: dotnet publish KlassenAdministratieDevOps/KlassenAdministratieDevOps.csproj -c Release --self-contained -r win-x64 -p:PublishSingleFile=true --no-build
