--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,11 @@ jobs:
       - run: dotnet build KlassenAdministratieDevOps.csproj -c Release --no-restore
         name: Action - Dotnet Build
         working-directory: KlassenAdministratieDevOps
-      - run: dotnet publish -r win-x64 -c Release --self-contained true -r win-x64 -p:PublishSingleFile=true --no-build
+      - run: dotnet publish -r win-x64 -c Release --self-contained true -p:PublishSingleFile=true --no-build
         name: Action - Dotnet Publish
         working-directory: KlassenAdministratieDevOps
       - uses: actions/create-release@v1
+        id: create_release
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
